[tool.poetry]
name = "011-timer"
version = "0.1.0"
description = ""
authors = ["k-kan-dev <k.kan.splended@gmail.com>"]
readme = "README.md"
packages = [{include = "011_timer"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
